--- a/Index.html
+++ b/Index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <section class="conteúdo-principal">
-        <h2 class="titulo-principal">Meus objetivos do ano_</h2>
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         
         <div class="botoes">
-            <button class="botao" >Ir bem nas provas</button>
+            <button class="botao ativo" >Ir bem nas provas</button>
             <button class="botao" >Terminar o ensino médio</button>
             <button class="botao" >Achar um serviço relacionado a faculdade a qual quero fazer</button>
             <button class="botao" >Fazer a faculdade dos sonhos</button>
