--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,46 @@
     <title>Meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="conteúdo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
-        
-        <div class="botoes">
-            <button class="botao ativo" >Ir bem nas provas</button>
-            <button class="botao" >Terminar o ensino médio</button>
-            <button class="botao" >Achar um serviço relacionado a faculdade a qual quero fazer</button>
-            <button class="botao" >Fazer a faculdade dos sonhos</button>
+
+        <div class="conteudo">
+            <div class="botoes">
+                <button class="botao ativo">Ir bem nas provas</button>
+                <button class="botao">Terminar o ensino médio</button>
+                <button class="botao">Achar um serviço relacionado a faculdade a qual quero fazer</button>
+                <button class="botao">Fazer a faculdade dos sonhos</button>
+            </div>
+
+            <div class="abas-textos">
+                <div class="aba-conteudo ativo">
+                    <h3 class="aba-conteudo-titulo-principal">Ir bem nas provas</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Terminar o ensino médio</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Achar um serviço relacionado a faculdade a qual quero
+                        fazer</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Fazer a faculdade dos sonhos</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+            </div>
         </div>
-
-
-
-
     </section>
-    
+    <script src="main.js"></script>
+
 </body>
+
 </html>
