--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,167 @@
-<!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>Meus Objetivos no ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <section class="conteúdo-principal">
-        <h2 class="titulo-principal">Meus objetivos do ano_</h2>
-        
-        <div class="botoes">
-            <button class="botao" >Ir bem nas provas</button>
-            <button class="botao" >Terminar o ensino médio</button>
-            <button class="botao" >Achar um serviço relacionado a faculdade a qual quero fazer</button>
-            <button class="botao" >Fazer a faculdade dos sonhos</button>
-        </div>
 
+<body>
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+
+        <div class="conteudo">
+            <div class="botoes">
+                <button class="botao ativo">Concluir o Ensino Médio</button>
+                <button class="botao">Passar No Vestibular</button>
+                <button class="botao">Começar Uma Faculdade</button>
+                <button class="botao">Ter minha propria casa</button>
+            </div>
+
+            <div class="abas-textos">
+                <div class="aba-conteudo ativo">
+                    <h3 class="aba-conteudo-titulo-principal">Concluir o Ensino Médio</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias0">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas0">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min0">7</p>
+                            <p class="contador-digito-texto">minutos</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg0">7</p>
+                            <p class="contador-digito-texto">segundos</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Passar No Vestibular</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias1">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas1">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="conta<html lang=" pt-br">
+
+                            <head>
+                                <meta charset="UTF-8">
+                                <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                                <title>Meus Objetivos no ano</title>
+                                <link rel="stylesheet" href="style.css">
+                            </head>
+
+                            <body>
+                                <section class="conteudo-principal">
+                                    <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+
+                                    <div class="conteudo">
+                                        <div class="botoes">
+                                            <button class="botao ativo">Começar Uma Faculdade</button>
+                                            <button class="botao">Morar Sozinho</button>
+                                            <button class="botao">Passar No Vestibular</button>
+                                            <button class="botao">Começar Uma Faculdade</button>
+                                        </div>
+
+                                        <div class="abas-textos">
+                                            <div class="aba-conteudo ativo">
+                                                <h3 class="aba-conteudo-titulo-principal">Concluir o Ensino Médio</h3>
+                                                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o
+                                                    objetivo</h4>
+                                                <div class="contador">
+                                                    <div class="contador-digito">
+                                                        <p class="contador-digito-numero" id="dias0">7</p>
+                                                        <p class="contador-digito-texto">dias</p>
+                                                    </div>
+                                                    <div class="contador-digito">
+                                                        <p class="contador-digito-numero" id="horas0">7</p>
+                                                        <p class="contador-digito-texto">horas</p>
+                                                    </div>
+                                                    <div class="contador-digito">
+                                                        <p class="contador-digito-numero" id="min0">7</p>
+                                                        <p class="contador-digito-texto">minutos</p>
+                                                    </div>
+                                                    <div class="contador-digito">
+                                                        <p class="contador-digito-numero" id="seg0">7</p>
+                                                        <p class="contador-digito-texto">segundos</p>
+                                                    </div>
+                                                </div>
+                                            </div>dor-digito">
+                                            <p class="contador-digito-numero" id="min1">7</p>
+                                            <p class="contador-digito-texto">minutos</p>
+                                        </div>
+                                        <div class="contador-digito">
+                                            <p class="contador-digito-numero" id="seg1">7</p>
+                                            <p class="contador-digito-texto">segundos</p>
+                                        </div>
+
+                                    </div>
+                        </div>
+                        <div class="aba-conteudo">
+                            <h3 class="aba-conteudo-titulo-principal">Passar No Vestibular</h3>
+                            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                            <div class="contador">
+                                <div class="contador-digito">
+                                    <p class="contador-digito-numero" id="dias2">7</p>
+                                    <p class="contador-digito-texto">dias</p>
+                                </div>
+                                <div class="contador-digito">
+                                    <p class="contador-digito-numero" id="horas2">7</p>
+                                    <p class="contador-digito-texto">horas</p>
+                                </div>
+                                <div class="contador-digito">
+                                    <p class="contador-digito-numero" id="min2">7</p>
+                                    <p class="contador-digito-texto">minutos</p>
+                                </div>
+                                <div class="contador-digito">
+                                    <p class="contador-digito-numero" id="seg2">7</p>
+                                    <p class="contador-digito-texto">segundos</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="aba-conteudo">
+                            <h3 class="aba-conteudo-titulo-principal">Ter minha propria casa</h3>
+                            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                            <div class="contador">
+                                <div class="contador-digito">
+                                    <p class="contador-digito-numero" id="dias3">7</p>
+                                    <p class="contador-digito-texto">dias</p>
+                                </div>
+                                <div class="contador-digito">
+                                    <p class="contador-digito-numero" id="horas3">7</p>
+                                    <p class="contador-digito-texto">horas</p>
+                                </div>
+                                <div class="contador-digito">
+                                    <p class="contador-digito-numero" id="min3">7</p>
+                                    <p class="contador-digito-texto">minutos</p>
+                                </div>
+                                <div class="contador-digito">
+                                    <p class="contador-digito-numero" id="seg3">7</p>
+                                    <p class="contador-digito-texto">segundos</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
     </section>
-    <script src="main.js"></script>    
+    <script src="main.js"></script>
+
 </body>
+
 </html>
